--- a/Url-shortening/src/index.css
+++ b/Url-shortening/src/index.css
@@ -2,8 +2,16 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
-
+:root {
+  --cyan: hsl(180, 66%, 49%);
+  --dark-violet: hsl(257, 27%, 26%);
+  --gray: hsl(0, 0%, 75%);
+  --grayish-violet: hsl(257, 7%, 63%);
+  --very-dark-blue: hsl(255, 11%, 22%);
+  --very-dark-violet: hsl(260, 8%, 14%);
+}
 body {
   background-color: rgb(53, 51, 51);
   display: flex;
@@ -13,13 +21,14 @@ body {
   background-color: white;
   width: 1440px;
   padding-top: 40px;
+  overflow: hidden;
+  padding-left: 140px;
+  padding-right: 140px;
 }
 .navBar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 130px;
-  padding-right: 130px;
 }
 .logoAndButtonsContainer {
   display: flex;
@@ -27,4 +36,77 @@ body {
 }
 .logoImg {
   margin-right: 10px;
+}
+.navBarButton {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  margin-left: 10px;
+}
+.mainIntroContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 30px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+.textSection {
+  padding-right: 50px;
+}
+.heading {
+  font-size: 75px;
+  font-weight: 800;
+  line-height: 90px;
+  
+}
+.introDescription{
+  font-size: 25px;
+}
+.illustrationImg {
+  margin-right: -240px;
+}
+.shortenContainer {
+  border: 1px solid black;
+  border-radius: 7px;
+  width: 100%;
+  height: 160px;
+  background-color: var(--dark-violet);
+  background-image: url(./images/bg-shorten-desktop.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+  margin-top: 30px;
+}
+.inputLink {
+  width: 850px;
+  height: 60px;
+  border-radius: 7px;
+  border: none;
+  padding-left: 20px;
+  font-size: 20px;
+}
+.shortenButton {
+  width: 170px;
+  height: 60px;
+  border-radius: 7px;
+  border: none;
+  background-color: var(--cyan);
+  color: white;
+  font-weight: 700;
+  font-size: 17px;
+  cursor: pointer;
+  margin-left: 15px;
+}
+.advancedStatistics {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.card {
+  width: 200px;
 }
