--- a/Url-shortening/src/index.css
+++ b/Url-shortening/src/index.css
@@ -110,3 +110,46 @@ body {
 .card {
   width: 200px;
 }
+.boostContainer{
+  background-color: var(--dark-violet);
+  background-image: url(./images/bg-boost-desktop.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 200px;
+  margin-left: -140px;
+  margin-right: -140px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.boostHeading{
+  font-size: 37px;
+  font-weight: 700;
+  color: white;
+  margin-bottom: 25px;
+}
+.footer{
+  background-color: var(--very-dark-violet);
+  margin-left: -140px;
+  margin-right: -140px;
+  padding-left: 140px;
+  padding-right: 140px;
+  color: white;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+}
+.column2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column: 2;
+  grid-row: 1;
+  
+}
+.columnd3 {
+  grid-column: 3;
+  grid-template-columns: repeat(2, 1fr);
+  grid-row: 1;
+}
+
