--- a/Url-shortening/src/index.css
+++ b/Url-shortening/src/index.css
@@ -41,7 +41,21 @@ body {
   background: transparent;
   border: none;
   cursor: pointer;
-  margin-left: 10px;
+  margin-left: 30px;
+  font-weight: 700;
+  font-size: 14px;
+  color: var(--gray);
+}
+.getStartedButton {
+  width: 190px;
+  height: 55px;
+  border-radius: 25px;
+  border: none;
+  background-color: var(--cyan);
+  color: white;
+  font-weight: 700;
+  font-size: 19px;
+  cursor: pointer;
 }
 .mainIntroContainer {
   display: flex;
@@ -51,17 +65,21 @@ body {
   padding-top: 40px;
   padding-bottom: 40px;
 }
+
 .textSection {
-  padding-right: 50px;
+  padding-right: 70px;
+  line-height: 30px;
 }
 .heading {
-  font-size: 75px;
+  font-size: 70px;
   font-weight: 800;
   line-height: 90px;
-  
 }
-.introDescription{
-  font-size: 25px;
+.introDescription {
+  font-size: 20px;
+  margin-top: 5px;
+  margin-bottom: 35px;
+  padding-right: 50px;
 }
 .illustrationImg {
   margin-right: -240px;
@@ -78,7 +96,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 20px;
   margin-top: 30px;
 }
 .inputLink {
@@ -106,11 +123,72 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background-color: #f0f1f6;
+  padding-top: 100px;
+  margin-left: -140px;
+  margin-right: -140px;
+  padding-left: 140px;
+  padding-right: 140px;
+}
+.advancedStatisticsTitle {
+  font-size: 25px;
+  font-weight: 800;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.advancedStatisticsText {
+  font-size: 14px;
+  color: var(--grayish-violet);
+  text-align: center;
+  line-height: 22px;
+  padding-left: 180px;
+  padding-right: 180px;
+}
+.advancedStatisticsCards {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-top: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .card {
-  width: 200px;
+  width: 350px;
+  height: 250px;
+  background-color: white;
+  position: relative;
+  border-radius: 10px;
+  padding: 30px;
+  padding-right: 32px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
 }
-.boostContainer{
+.cardIcon {
+  background-color: var(--dark-violet);
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: -35px;
+}
+.cardTitle {
+  font-size: 20px;
+  font-weight: 800;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+.cardInfo {
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--grayish-violet);
+  line-height: 22px;
+}
+.boostContainer {
   background-color: var(--dark-violet);
   background-image: url(./images/bg-boost-desktop.svg);
   background-repeat: no-repeat;
@@ -123,13 +201,13 @@ body {
   justify-content: center;
   align-items: center;
 }
-.boostHeading{
+.boostHeading {
   font-size: 37px;
   font-weight: 700;
   color: white;
   margin-bottom: 25px;
 }
-.footer{
+.footer {
   background-color: var(--very-dark-violet);
   margin-left: -140px;
   margin-right: -140px;
@@ -145,11 +223,9 @@ body {
   grid-template-columns: repeat(2, 1fr);
   grid-column: 2;
   grid-row: 1;
-  
 }
 .columnd3 {
   grid-column: 3;
   grid-template-columns: repeat(2, 1fr);
   grid-row: 1;
 }
-
